--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ java/jdtls-1.39.0/config_linux/org.eclipse.osgi/.manager/.fileTable.3
 java/jdtls-1.39.0/config_linux/org.eclipse.osgi/.manager/.fileTable.4
 java/jdtls-1.39.0/config_linux/org.eclipse.osgi/55/0/.cp/gradle/
 java/jdtls-1.39.0/config_linux/org.eclipse.osgi/framework.info.3
+.emacs-buffers
+.emacs.desktop
